--- a/README
+++ b/README
@@ -1,1 +1,16 @@
 WeeWikiPaint
+============
+
+# Prerequisites
+
+1. NodeJS (Ubuntu)
+Install the version 6 repo with:
+
+    curl -sL https://deb.nodesource.com/setup_6.x| sudo -E bash -
+    sudo apt install nodejs
+
+2. Node dependencies
+
+    npm install jake
+    npm install jslint
+
